<resources>
    <string name="app_name">Peliculas App</string>
    <string name="register">Register</string>
    <string name="intro">Intro</string>
    <string name="password">Password</string>
    <string name="lastname">Last Name</string>
    <string name="name">Name</string>
    <string name="email">e-mail</string>
    <string name="year">years</string>
    <string name="user">Users</string>
    <string name="namepremier">Name Premier</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="namenextrelease">Name Next Releases</string>
    <string name="datereleasepremier">Date Releases</string>
    <string name="namemovie">Name Movie</string>
    <string name="gender">Gender</string>
    <string name="movies">Movies</string>
    <string name="remember">Remember</string>
    <string name="salir">Exit</string>
    <string name="profile">Profile</string>
    <string name="cerrarsesion">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="comment">Comment</string>
    <string name="sendcomment">Send Comment about Movie</string>
    <string name="send">Send</string>
    <string name="moviesstoremember">Movies to Remember</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="premiers">Premiers</string>
    <string name="nextreleases">Next Releases</string>
    <string name="menu_open">Open Menu</string>
    <string name="menu_cerrado">Close Menu</string>
    <string name="fastandthefurious">Fast and the Furious</string>
    <string name="may2">may 2 to 2017</string>
    <string name="imagee1">http://e.rpp-noticias.io/large/2016/04/28/12951100jpg.jpg</string>
    <string name="minutes160">160 minutes</string>
    <string name="cartelera">Releases</string>
    <string name="proximosestreos">Next Releases</string>
    <string name="classification">classification:</string>
    <string name="oldyeras12">Over 12 years old</string>
    <string name="sinopsisrapidosyfuriosos">Just as Dom and Letty celebrate their honeymoon, Brian and Mia have withdrawn from the game and the rest of the team has disintegrated in search of a common and ordinary life; A mysterious woman will try to seduce Dom to convince him to return to the criminal life that both stalks him, betraying those around him and facing challenges never seen before. From the Cuban coast passing through the streets of New York and even the icy Arctic, the team will have to cross the world to stop an anarchist and avoid a global disaster bringing back home the man who turned them into a family.</string>
    <string name="action">Action</string>
    <string name="fiction">Fiction</string>
    <string name="docemil">$12.000</string>
    <string name="unjefe">Born Leader</string>
    <string name="abril28">April 28 2017</string>
    <string name="duracionunjefe">1 Hour 36 minutes</string>
    <string name="allpeople">Suitable for all audiences</string>
    <string name="sinopsisunjefe">Meet the most unusual baby, wear a suit. A boss in diapers is a universal and hilarious story about how the arrival of a new baby impacts a family, told from the perspective of a unreliable, but charming narrator: Tim, a seven-year-old, unbridled, imaginative mind. With a rogue, but poignant, message about the importance of the family.</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="diezmil">$10.000</string>
    <string name="diadelatentado">Patriots Day</string>
    <string name="mayo3">May 3 to 2017</string>
    <string name="minutos130">130 minutes</string>
    <string name="sinopsisdiadelatentado">Patriots Day is the reconstruction of the Boston bombing of 2013 and a tribute to the everyday heroes who inspired the world in the extraordinary hours that followed. Following an act of terrorist, Police Sergeant Tommy Saunders (Mark Wahlberg) joins brave survivors, lifeguards and investigators in a race against watch to catch the Bombers before they attack again. Along with the stories of Special Agent Richard Deslauriers (Kevin Bacon); Police Commissioner Ed Davis (John Goodman); Sgt. Jeffrey Pugliese (JK Simmons) and nurse Carol Saunders (Michelle Monaghan), this visceral and unshakable chronicle captures the intensity and suspense of an event that caught the world.</string>
    <string name="ochomil">$8.000</string>
    <string name="drama">Drama</string>
    <string name="nuncadigassunombre">The bye bye Man</string>
    <string name="minutos96">96 minutes</string>
    <string name="sinopsisnuncadigas">When three college students move to an old house off campus, unwittingly, they release a "Bye Bye Man \", a supernatural entity that pursues the one who discovers his name. They will try to keep their existence secret from the rest of a certain death.</string>
    <string name="terror">Terror</string>
    <string name="Supernatural">Sobrenatural</string>
    <string name="imgunjefe">http://tbsila.cdn.turner.com/tbsila/tntla/images/10192/451637/g/the-boss-baby-poster.jpg</string>
    <string name="imgdiadelatentado">https://i.ytimg.com/vi/0mNlbE-yD_8/hqdefault.jpg</string>
    <string name="imgnuncadigas">http://newcinema.es/imagenes/2016/09/nunca-digas-su-nombre-cartel.jpg</string>
    <string name="lospitufos">The Smurfs</string>
    <string name="mayo1">May 1 2017</string>
    <string name="imglospitufos">https://i.ytimg.com/vi/jlkeR7ocvNw/hq720.jpg</string>
    <string name="minutos89">89 minutes</string>
    <string name="sinopsispitufos">Smurfette and her siblings practice hiking through the enchanted wilderness trying to find a legendary village for the Smurfs. You must do it before your nemesis, the evil wizard Gargamel, will do it. Along the way, some of the Smurfs +"'"+ mysteries begin to come to light.</string>
    <string name="adventure">Adventure</string>
    <string name="guardianesgalaxia">Guardians of the Galaxy 2</string>
    <string name="abril27">Abril 27 de 2017</string>
    <string name="imgguardianesgal">https://www.findelahistoria.com/web/wp-content/uploads/2017/01/guardianes-de-la-galaxia-1.jpg</string>
    <string name="minutos120">120 minutes</string>
    <string name="sinopsisguardianes">Set in the new sound context of "Awesome mixtape # 2", Guardians of the Galaxy Vol. 2, Marvel, continues the adventures of the team in their journey through the confines of the cosmos. The Guardians must fight to keep their new family together while trying to unravel the mystery of Peter Quill+"'"+ s true lineage. Old rivals will become new allies and the favorite characters of the classic comics come to help our heroes as the cinematic universe of Marvel continues to expand.</string>
    <string name="catorcemil">$14.000</string>
    <string name="colossal">Colossal</string>
    <string name="mayo18">Mayo 18</string>
    <string name="imgcolosal">http://www.asturscore.com/wp-content/uploads/2017/04/Colossal.jpg</string>
    <string name="minutos110">110 minutes</string>
    <string name="mom">Mom</string>
    <string name="imgmom">https://s-media-cache-ak0.pinimg.com/736x/55/07/df/5507df006cb8451be78d704df99ae93e.jpg</string>
    <string name="minutos78">78 minutes</string>
    <string name="huye">Get Out!</string>
    <string name="imghuye">http://www.cinevistablog.com/wp-content/uploads/2017/04/huye-get-out-pelicula-de-horror-y-misterio-exito-de-taquilla-y-en-sundance_opt2_.jpg</string>
    <string name="unahora44min">1 hour 44 minutes</string>
    <string name="rapidoypeludo">Fast and Furriest</string>
    <string name="junio1">Junio 1</string>
    <string name="imgrapidoypeludo">http://p2.trrsf.com/image/fget/cf/thumbox-ttv.terra.com/video/58dab9ce2735ba1f2f8d0fea.jpg</string>
    <string name="minutos90">90 minutes</string>
    <string name="mujermaravilla">Wonder Woman</string>
    <string name="imgmujermaravilla">http://media.ultimahora.com/adjuntos/161/imagenes/003/328/0003328988.jpg</string>
    <string name="pitufos">The Smurfs</string>
    <string name="movieseleccion">Movie Seleccion to Qualify</string>
    <string-array name="moviesestrenos">
        <item>Fast and Furious</item>
        <item>Born Leader</item>
        <item>Patriots Day</item>
        <item>The bye bye Man</item>
        <item>The Smurfs</item>
        <item>Guardians of the Galaxy 2</item>
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="calificarpeliculas">Rate Movies</string>
    <string name="lamomia">The Mommy</string>
    <string name="junio8">Junio 8</string>
    <string name="imglamomia">https://1.bp.blogspot.com/-bfnPczu2DhM/WEU_M1EdIfI/AAAAAAABD1I/FuYrO24IMsAEWcVtUGIB5DQGSnMSblsVACLcB/s1600/trailer-momia-2017.jpg</string>
    <string name="guardianesbahia">Guardians of the Bay</string>
    <string name="junio15">Junio 15</string>
    <string name="imggaurdianesbahia">https://cinemedios.files.wordpress.com/2016/12/baywatch-2017-cast-trailer-article.png</string>
    <string name="minutos100">100 minutes</string>
    <string name="nombrepelicula">Name Movie</string>
    <string name="genero1">Gender 1</string>
    <string name="genero2">Gender 2</string>
    <string name="dimens25000">25000</string>
    <string name="todopublico">Suitable for all audiences</string>
    <string name="generos">Genders</string>
    <string name="sinopsispelicula">Synopsis of the film</string>
    <string name="descripcionpelicula">Description to Movie</string>
    <string name="titlespiderman">Spider-Man: Homecoming</string>
    <string name="tittlethor">THOR - RAGNAROK</string>
    <string name="november2">Thursday, November 2, 2017</string>
    <string name="imgspiderman">http://www.gamersrd.com/wp-content/uploads/2017/03/Spider-Man-Homecoming-Tom-Holland.jpg</string>
    <string name="july6">Thursday, July 6, 2017</string>
    <string name="imgthor">https://www.nocreasnada.com/wp-content/uploads/2017/04/2017-04-11_58ec33ddbf1ec_thorragnarok.jpg</string>
    <string name="sinopsisspiderman">Peter Parker / Spider-Man, who made his sensational debut in Captain America: Civil War, begins directing his new identity as a superhero in Spider-Man: Returning Home Excited by his experience with The Avengers, Peter returns to Home, where she lives with her Aunt May, under the watchful eye of her new mentor Tony Stark. Peter tries to fall back into his normal daily routine - distracted by the thoughts of proving himself to be more than just the friendly neighbor Spider-Man - but when the vulture emerges as a new villain, everything that is most important to Peter will be threatened.</string>
    <string name="sinopsisthor">In THOR - RAGNAROK, from Marvel Studios, Asgard is threatened, but Thor is trapped at the other end of the universe without his hammer and to escape and save his planet must face his former ally and fellow Avenger ... The incredible Hulk!</string>
    <string name="june29">Thrusday, June 29, 2017</string>
    <string name="july20">Thrusday, July 20, 2017</string>
    <string name="august31">Thrusday, August 31, 2017</string>
    <string name="imgmivillano">https://i.ytimg.com/vi/GpPUFmhBct8/maxresdefault.jpg</string>
    <string name="sciencefiction">Science fiction</string>
    <string name="october12">Thrusday, October 12, 2017</string>
    <string name="imgcondorito">http://pics.filmaffinity.com/condorito_la_pelicula_en_3d-858838274-large.jpg</string>
    <string name="september7">Thrusday, September 7, 2017</string>
    <string name="imgit">https://i.ytimg.com/vi/BkknhPvLawU/maxresdefault.jpg</string>
    <string name="tittleit">It</string>
    <string name="imgguardians">https://i.ytimg.com/vi/g9srhnt1b4E/maxresdefault.jpg</string>
    <string name="imgtransformers">https://i.ytimg.com/vi/4FU4Egle4Nk/hq720.jpg</string>
    <string name="tittletransformers">Transformers: The last Knigth</string>
</resources>