<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="movil.unicauca.peliculas.fragments.RememberFragment"
    android:id="@+id/remember"
    >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView19"
            android:layout_width="@dimen/dimens0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens8"
            android:layout_marginLeft="@dimen/dimens8"
            android:layout_marginRight="@dimen/dimens8"
            android:layout_marginStart="@dimen/dimens8"
            android:layout_marginTop="@dimen/dimens8"
            android:gravity="center"
            android:text="@string/moviesstoremember"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/negro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="@dimen/dimens0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens8"
            android:layout_marginRight="@dimen/dimens8"
            android:layout_marginTop="@dimen/dimens8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:text="@string/namemovie"
            android:layout_marginStart="@dimen/dimens8"
            android:layout_marginEnd="@dimen/dimens8" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="@dimen/dimens0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens8"
            android:layout_marginRight="@dimen/dimens8"
            android:layout_marginTop="@dimen/dimens8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:text="@string/generos"
            android:layout_marginStart="@dimen/dimens8"
            android:layout_marginEnd="@dimen/dimens8" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="@dimen/dimens0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView27"
            app:layout_constraintTop_toTopOf="@+id/textView27"
            tools:text="@string/genero1"
            android:layout_marginLeft="@dimen/dimens8" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="@dimen/dimens0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens8"
            app:layout_constraintLeft_toRightOf="@+id/textView24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            tools:text="@string/genero2"
            android:layout_marginRight="@dimen/dimens8" />

    </android.support.constraint.ConstraintLayout>



</FrameLayout>
