<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="movil.unicauca.peliculas.fragments.CalificationFragment"
    android:id="@+id/calification"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"

                ><!-- android:id="@+id/calification" -->

                <TextView
                    android:id="@+id/txtseleccionpel"
                    android:layout_width="@dimen/dimens0"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens8"
                    android:layout_marginLeft="@dimen/dimens8"
                    android:layout_marginRight="@dimen/dimens8"
                    android:layout_marginStart="@dimen/dimens8"
                    android:layout_marginTop="@dimen/dimens8"
                    android:text="@string/movieseleccion"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/negro"
                    />

                <Spinner
                    android:id="@+id/moviesestrenos"
                    android:layout_width="@dimen/dimens0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimens8"
                    android:layout_marginRight="@dimen/dimens8"
                    android:layout_marginTop="@dimen/dimens10"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtseleccionpel"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:entries="@array/moviesestrenos"
                    />

                <TextView
                    android:id="@+id/peliculas"
                    android:layout_width="@dimen/dimens0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimens8"
                    android:layout_marginRight="@dimen/dimens8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/negro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="136dp"
                    tools:text="@string/comment" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="@dimen/dimens0"
                    android:layout_height="@dimen/dimens0"
                    android:layout_marginBottom="@dimen/dimens8"
                    android:layout_marginLeft="@dimen/dimens8"
                    android:layout_marginRight="@dimen/dimens8"
                    android:layout_marginTop="@dimen/dimens16"
                    android:ems="10"
                    android:hint="@string/sendcomment"
                    android:inputType="text|textMultiLine"
                    app:layout_constraintBottom_toTopOf="@+id/btnenviar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/peliculas" />

                <Button
                    android:id="@+id/btnenviar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimens8"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="376dp"
                    tools:text="@string/send" />

                 <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimens8"
                    app:layout_constraintTop_toBottomOf="@+id/moviesestrenos"
                    android:layout_marginBottom="@dimen/dimens8"
                    app:layout_constraintBottom_toTopOf="@+id/peliculas"
                     app:layout_constraintVertical_bias="1.0"
                    android:numStars="5"
                    android:rating="2.0"
                    android:stepSize="1.0"
                     android:layout_marginRight="8dp"
                     app:layout_constraintRight_toRightOf="parent"
                     android:layout_marginLeft="8dp"
                     app:layout_constraintLeft_toLeftOf="parent" />
            </android.support.constraint.ConstraintLayout>


    </LinearLayout>



</FrameLayout>

